--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>可视化大屏</title>
+	<title>大数据离线日志分析平台</title>
 	<link rel="stylesheet" href="icon/iconfont.css">
 	<script src="js/jquery.min.js"></script>
 	<script src="js/echarts.min.js"></script>
